=== 1.1.0 xxxx-xx-xx

* Configuration files now don't force you to use the :default file set.  If you
  don't specify any file sets, then the default is used; if you specify file
  sets, it uses what you specify.

=== 1.0.1 2012-04-23

* gh-104: Fixed incorrect rendering of config file when using
  `tailor --create-config`.

=== 1.0.0 2012-04-17

* Big update to config file.
* Fix for indentation checking on nested Hashes.
* Fix for overriding default style in config files.
* Fix to exit after --show-config.
* gh-99[https://github.com/turboladen/tailor/issues/99]
  * Now warns by default if `ruby -c [file]` fails.
* gh-93[https://github.com/turboladen/tailor/issues/93]
  * 2 'end's on the same line don't cause an indentation error.
* gh-92[https://github.com/turboladen/tailor/issues/92]
  * Users can now turn off a ruler...
    * CLI: <tt>--my-option off</tt>
    * Config file: <tt>my_option 1, level: :off</tt>
* gh-86[https://github.com/turboladen/tailor/issues/86]
  * Indentation checking implemented.
* gh-68[https://github.com/turboladen/tailor/issues/68]
  * Spaces aren't improperly detected after a token when the line ends with a
    backslash.

=== 1.0.0.alpha2 2012-04-09

* Fix for when not using a config file.

=== 1.0.0.alpha 2012-04-09

* Complete rewrite.
* New style checks:
  * Indentation.
  * LOC count in a class.
  * LOC count in a method.
  * Trailing newlines at EOF.
* Other new features:
  * Configuration file use--both .tailor and ~/.tailorrc--lets you specify
    groups of files.
  * Turn checks off via CLI options.

=== 0.1.5 2011-09-27

* Fixed post install message to use heredoc instead of %w (<-wth was I thinking?)

=== 0.1.4 2011-09-27

* gh-81: Return exit status of 1 if problems were found.
* Fixed Rakefile and .gemspec. [sergio-fry]
* Removed dependency on hoe for gem building.
* Added -v/--version to bin/tailor.
* Fixed documenatation indentation.

=== 0.1.3 2010-12-14

* Added check for .erb files.

=== 0.1.2 2010-09-01
